--- a/src/gui/StartSpel.fxml
+++ b/src/gui/StartSpel.fxml
@@ -35,12 +35,12 @@
                         <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="lblPrestigepunten" prefHeight="92.0" prefWidth="187.0" text="Totaal aantal prestigepunten:" wrapText="true">
+                  <Label fx:id="lblPrestigepunten" prefHeight="92.0" prefWidth="229.0" text="Prestigepunten:" wrapText="true">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="aantalPrestigePunten">
+                  <Label fx:id="aantalPrestigePunten" prefHeight="30.0" prefWidth="55.0">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -75,6 +75,7 @@
                         <RowConstraints maxHeight="492.3739013671875" minHeight="10.0" prefHeight="480.5394287109375" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="492.3739013671875" minHeight="10.0" prefHeight="480.5394287109375" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="530.5323486328125" minHeight="10.0" prefHeight="478.4605712890625" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="530.5323486328125" minHeight="10.0" prefHeight="478.4605712890625" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
                         <Button fx:id="btnVolgende" disable="true" mnemonicParsing="false" onAction="#btnVolgendeClicked" prefHeight="38.0" prefWidth="158.0" text="Volgende speler" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="5">
@@ -85,7 +86,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button fx:id="btnStartRonde" mnemonicParsing="false" onAction="#btnStartRondeClicked" prefHeight="38.0" prefWidth="198.0" text="Start Ronde" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                        <Button fx:id="btnStartRonde" mnemonicParsing="false" onAction="#btnStartRondeClicked" prefHeight="38.0" prefWidth="198.0" text="Start Ronde" GridPane.rowIndex="5">
                            <font>
                               <Font name="RomanC" size="12.0" />
                            </font>
@@ -175,6 +176,11 @@
                               <Font name="RomanC" size="16.0" />
                            </font>
                         </Label>
+                        <ImageView fx:id="imgEdeleSpeler1" fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
+                        <ImageView fx:id="imgEdeleSpeler2" fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <ImageView fx:id="imgEdeleSpeler3" fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <ImageView fx:id="imgEdeleSpeler4" fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                        <ImageView fx:id="imgEdeleSpeler5" fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                      </children>
                      <HBox.margin>
                         <Insets />
