--- a/src/gui/Menu.fxml
+++ b/src/gui/Menu.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="600.0" type="GridPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
       <RowConstraints maxHeight="62.13333740234375" minHeight="75.0" />
       <RowConstraints maxHeight="62.13333740234375" minHeight="40.0" prefHeight="40.0" />
@@ -27,12 +27,12 @@
       <ColumnConstraints halignment="CENTER" />
    </columnConstraints>
    <children>
-      <ImageView fx:id="BGImage" fitHeight="659.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="4">
+      <ImageView fx:id="BGImage" fitHeight="683.0" fitWidth="602.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="3">
          <image>
             <Image url="@../images/splendor.jpg" />
          </image>
       </ImageView>
-      <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="500.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="5.0" width="494.0" GridPane.rowIndex="4" />
+      <Rectangle fx:id="kader" arcHeight="5.0" arcWidth="5.0" blendMode="OVERLAY" fill="#1f93ff00" height="500.0" stroke="#fffbfb" strokeType="INSIDE" strokeWidth="5.0" width="494.0" GridPane.rowIndex="3" />
       <Label fx:id="titelSpel" contentDisplay="CENTER" text="Splendor" textFill="WHITE" GridPane.rowIndex="1">
          <font>
             <Font name="GothicI" size="60.0" />
