--- a/src/gui/Start.fxml
+++ b/src/gui/Start.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <fx:root type="StackPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="BGImage" fitHeight="612.0" fitWidth="626.0" pickOnBounds="true" preserveRatio="true">
@@ -37,7 +36,7 @@
                         <Font size="30.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnPlay" blendMode="SCREEN" focusTraversable="false" mnemonicParsing="false" onAction="#btnSpelenClicked" prefHeight="55.0" prefWidth="233.0" text="Play">
+                  <Button fx:id="btnPlay" blendMode="SCREEN" focusTraversable="false" mnemonicParsing="false" onAction="#btnPlayClicked" prefHeight="55.0" prefWidth="233.0" text="Play">
                      <font>
                         <Font size="30.0" />
                      </font>
