--- a/src/gui/WinnaarsOverzicht.fxml
+++ b/src/gui/WinnaarsOverzicht.fxml
@@ -26,7 +26,7 @@
          <children>
             <HBox>
                <children>
-                  <Label fx:id="lblWinnaar" alignment="TOP_CENTER" contentDisplay="TOP" text="Winnaar" textFill="#e4dede">
+                  <Label fx:id="lblWinnaar" alignment="TOP_CENTER" contentDisplay="TOP" prefHeight="90.0" prefWidth="435.0" text="Winnaar" textAlignment="CENTER" textFill="#e4dede">
                      <font>
                         <Font name="GothicI" size="70.0" />
                      </font>
